# PCli

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile.cli  Readme.md  flake.nix  justfile
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
cli/: Cargo.toml  build.rs
cli/src/: args.rs  main.rs  template.rs
cli/src/commands/: mod.rs
cli/src/commands/aws/: mod.rs  sts_id_token.rs  sts_mfa.rs
cli/src/commands/email/: mod.rs
cli/src/templates/: sts_id_token.html
docs/: index.md
infra/: docker-compose.yaml  tempo-s3.yaml
main/: Cargo.toml
main/src/: lib.rs
main/src/aws/: constants.rs  gitlab.rs  mod.rs  sts.rs  utils.rs
