[package]
name = "main"
description = "All the core logic that powers the cli"
authors = [
    "Pavan Katakam <katakampavan.btech@gmail.com>"
]
version = "0.1.0"
edition = "2021"

rust-version = "1.79.0"

[dependencies]
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3.0"}
tokio = { version = "1", features = ["full"] }
aws-config = { version= "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.17.0"}
aws-sdk-sts = { version = "1.17.0"}
shellexpand = {version = "3.1.0"}
rust-ini = {version = "0.21.0"}
jsonwebtoken = {version = "=9.3.0"}
serde = {workspace = true}
serde_json = {workspace = true}
reqwest = {version = "=0.12.2"}
aws-types = "1.1.8"
